# codecov-demo

./: .gitignore  README.md  codecov.yml
.circleci/: config.yml
.github/workflows/: api.yml
api/calculator/: test_calculator.py
api/smiles/: smiles.py  test_smiles.py
api_c/: CMakeLists.txt
api_c/calculator/: CMakeLists.txt  calculator.cpp  calculator.hpp  test-calculator.cpp
api_c/smiles/: CMakeLists.txt  smiles.cpp  smiles.hpp  test-smiles.cpp
codecovenv/: pyvenv.cfg
